Preventing too large invite popouts

--- a/frontend/popouts/invites/InvitesPopout.module.scss
+++ b/frontend/popouts/invites/InvitesPopout.module.scss
@@ -1,14 +1,33 @@
 .container {
-    padding: var(--spacing-tertiary);
+    max-height: 200px;
+    width: 300px;
+    overflow: auto;
+
+    &::-webkit-scrollbar {
+        width: 14px;
+    }
+    &::-webkit-scrollbar-thumb {
+        background-color: var(--background-quinary);
+        border: 4px solid var(--background-tertiary);
+        border-radius: 120px;
+    }
 }
 .header {
     margin-bottom: var(--spacing-tertiary);
+    background-color: var(--background-tertiary);
+    border-radius: var(--border-radius-secondary);
+    padding: var(--spacing-tertiary);
     display: block;
     font-size: 12px;
+    position: sticky;
+    top: 0;
 }
 .items {
     display: grid;
     gap: var(--spacing-quaternary);
+    padding: var(--spacing-tertiary);
+    margin-top: calc(-1 * var(--spacing-tertiary));
+    padding-top: 0;
 }
 .item {
     display: flex;
